--- a/views/about.hbs
+++ b/views/about.hbs
@@ -282,13 +282,13 @@
                         ================================================================-->
                           <div class="slide">
                             <section class="biotext">
-                              <h1 class="text-left text-xl font-medium mb-1 -mt-2">Eagle Wu</h1>
+                              <h1 class="text-left text-2xl font-medium mb-1 -mt-2">Eagle Wu</h1>
                               <hr>
-                              <h5 class="text-left text-xs">Enterpreneurship @Babson College</h5>
-                              <h5 class="text-left text-xs">Winner, Money 20/20 Hackathon</h5>
+                              <h5 class="text-left text-md">Enterpreneurship @Babson College</h5>
+                              <h5 class="text-left text-md">Winner, Money 20/20 Hackathon</h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
-                                  <p class="text-left  text-sm ">
+                                  <p class="text-left text-md ">
                                     Eagle Wu grew up in Philadelphia before going to Babson College to study
                                     entrepreneurship. He founded VINCI while a student and is the CEO of the company. He is
                                     focused on growing VINCI's tools and team to help solve training problems across various
@@ -304,13 +304,13 @@
                         ================================================================-->
                           <div class="slide">
                             <section class="biotext">
-                              <h1 class="text-left text-xl font-medium mb-1 -mt-2">Tim Clancy</h1>
+                              <h1 class="text-left text-2xl font-medium mb-1 -mt-2">Tim Clancy</h1>
                               <hr>
-                              <h5 class="text-left text-xs">Computer Science, MS @UPenn</h5>
-                              <h5 class="text-left text-xs">Lead Developer, Salad Blockchain</h5>
+                              <h5 class="text-left text-md">Computer Science, MS @UPenn</h5>
+                              <h5 class="text-left text-md">Lead Developer, Salad Blockchain</h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
-                                  <p class="text-left  text-sm ">
+                                  <p class="text-left text-md ">
                                     Tim Clancy is a native of southern Massachusetts currently living in Ithaca, New York.
                                     In 2018 he received his BSE and MSE in computer science from the University of Pennsylvania
                                     after accelerating a five year submatriculation program to completion in four years. He is the
@@ -328,13 +328,13 @@
                         ================================================================-->
                           <div class="slide">
                               <section class="biotext">
-                                <h1 class="text-left text-xl font-medium mb-1 -mt-2">Liam Clancy</h1>
+                                <h1 class="text-left text-2xl font-medium mb-1 -mt-2">Liam Clancy</h1>
                                 <hr>
-                                <h5 class="text-left text-xs">Computer Science @Boston University</h5>
-                                <h5 class="text-left text-xs"></h5>
+                                <h5 class="text-left text-md">Computer Science @Boston University</h5>
+                                <h5 class="text-left text-md"></h5>
                                 <hr class="bio-hr mb-3">
                                 <div class="hidden-text-team overflow-x-auto">
-                                    <p class="text-left  text-sm ">
+                                    <p class="text-left text-md ">
                                       Liam Clancy was born in Providence, Rhode Island, and received his education at Boston
                                       University for Computer Science. He is a developer for VINCI, where his primary focus is on
                                       the CODEX platform and applications interfacing with the simulation, such as the Instructor
@@ -351,13 +351,13 @@
                         ================================================================-->
                           <div class="slide">
                             <section class="biotext">
-                              <h1 class="text-left text-xl font-medium mb-1 -mt-2">Matthew Oh</h1>
+                              <h1 class="text-left text-2xl font-medium mb-1 -mt-2">Matthew Oh</h1>
                               <hr>
-                              <h5 class="text-left text-xs">Economics @Tuft University</h5>
-                              <h5 class="text-left text-xs"></h5>
+                              <h5 class="text-left text-md">Economics @Tuft University</h5>
+                              <h5 class="text-left text-md"></h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
-                                  <p class="text-left  text-sm ">
+                                  <p class="text-left text-md ">
                                     Matthew Oh is the Business Development Analyst at Vinci. Originally from the Bay
                                     Area, he is a student at Tufts University, majoring in Economics and minoring in Finance &
                                     English. At Vinci, Matthew is responsible for research and outreach — primarily in the private
@@ -372,13 +372,13 @@
                         ================================================================-->
                           <div class="slide">
                             <section class="biotext">
-                              <h1 class="text-left text-xl font-medium mb-1 -mt-2">Sloan Poelman</h1>
+                              <h1 class="text-left text-2xl font-medium mb-1 -mt-2">Sloan Poelman</h1>
                               <hr>
-                              <h5 class="text-left text-xs">Graduate @BYU</h5>
-                              <h5 class="text-left text-xs">2x BYU Animation Award Winner</h5>
+                              <h5 class="text-left text-md">Graduate @BYU</h5>
+                              <h5 class="text-left text-md">2x BYU Animation Award Winner</h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
-                                  <p class="text-left  text-sm ">
+                                  <p class="text-left text-md ">
                                    Sloan Poelman is a passionate multimedia artist strong in stylized and realistic
                                    rendering styles. Originally from Orem, Utah, he worked with a team at Brigham Young
                                    University to compete on a national level with two video games, and received BYU Design
@@ -396,13 +396,13 @@
                         ================================================================-->
                           <div class="slide">
                             <section class="biotext">
-                              <h1 class="text-left text-xl font-medium mb-1 -mt-2">Laura Prados-Bacó</h1>
+                              <h1 class="text-left text-2xl font-medium mb-1 -mt-2">Laura Prados-Bacó</h1>
                               <hr>
-                              <h5 class="text-left text-xs  mb-1">Studying @Babson College</h5>
-                              <h5 class="text-left text-xs  mb-1"></h5>
+                              <h5 class="text-left text-md  mb-1">Studying @Babson College</h5>
+                              <h5 class="text-left text-md  mb-1"></h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
-                                  <p class="text-left  text-sm ">
+                                  <p class="text-left text-md ">
                                     Laura Prados-Bacó was born and raised in San Juan, Puerto Rico. At 18 years old, she left
                                     Puerto Rico to pursue an education at Babson College. She currently holds the Marketing
                                     position in the Business Development division at Vinci, where she aids with the creation of
@@ -853,13 +853,13 @@
                         ================================================================-->
                           <div class="slide">
                             <section class="biotext">
-                              <h1 class="text-left text-xl font-medium mb-1 -mt-2">Eagle Wu</h1>
+                              <h1 class="text-left text-2xl font-medium mb-1 -mt-2">Eagle Wu</h1>
                               <hr>
                               <h5 class="text-left text-sm">Enterpreneurship @Babson College</h5>
                               <h5 class="text-left text-sm">Winner, Money 20/20 Hackathon</h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
-                                  <p class="text-left  text-sm ">
+                                  <p class="text-left text-md ">
                                     Eagle Wu grew up in Philadelphia before going to Babson College to study
                                     entrepreneurship. He founded VINCI while a student and is the CEO of the company. He is
                                     focused on growing VINCI's tools and team to help solve training problems across various
@@ -875,13 +875,13 @@
                         ================================================================-->
                           <div class="slide">
                             <section class="biotext">
-                              <h1 class="text-left text-xl font-medium mb-1 -mt-2">Tim Clancy</h1>
+                              <h1 class="text-left text-2xl font-medium mb-1 -mt-2">Tim Clancy</h1>
                               <hr>
                               <h5 class="text-left text-sm">Computer Science, MS @UPenn</h5>
                               <h5 class="text-left text-sm">Lead Developer, Salad Blockchain</h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
-                                  <p class="text-left  text-sm ">
+                                  <p class="text-left text-md ">
                                     Tim Clancy is a native of southern Massachusetts currently living in Ithaca, New York.
                                     In 2018 he received his BSE and MSE in computer science from the University of Pennsylvania
                                     after accelerating a five year submatriculation program to completion in four years. He is the
@@ -899,13 +899,13 @@
                         ================================================================-->
                           <div class="slide">
                               <section class="biotext">
-                                <h1 class="text-left text-xl font-medium mb-1 -mt-2">Liam Clancy</h1>
+                                <h1 class="text-left text-2xl font-medium mb-1 -mt-2">Liam Clancy</h1>
                                 <hr>
                                 <h5 class="text-left text-sm">Computer Science @Boston University</h5>
                                 <h5 class="text-left text-sm"></h5>
                                 <hr class="bio-hr mb-3">
                                 <div class="hidden-text-team overflow-x-auto">
-                                    <p class="text-left  text-sm ">
+                                    <p class="text-left text-md ">
                                       Liam Clancy was born in Providence, Rhode Island, and received his education at Boston
                                       University for Computer Science. He is a developer for VINCI, where his primary focus is on
                                       the CODEX platform and applications interfacing with the simulation, such as the Instructor
@@ -922,13 +922,13 @@
                         ================================================================-->
                           <div class="slide">
                             <section class="biotext">
-                              <h1 class="text-left text-xl font-medium mb-1 -mt-2">Matthew Oh</h1>
+                              <h1 class="text-left text-2xl font-medium mb-1 -mt-2">Matthew Oh</h1>
                               <hr>
                               <h5 class="text-left text-sm">Economics @Tuft University</h5>
                               <h5 class="text-left text-sm"></h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
-                                  <p class="text-left  text-sm ">
+                                  <p class="text-left text-md ">
                                     Matthew Oh is the Business Development Analyst at Vinci. Originally from the Bay
                                     Area, he is a student at Tufts University, majoring in Economics and minoring in Finance &
                                     English. At Vinci, Matthew is responsible for research and outreach — primarily in the private
@@ -943,13 +943,13 @@
                         ================================================================-->
                           <div class="slide">
                             <section class="biotext">
-                              <h1 class="text-left text-xl font-medium mb-1 -mt-2">Sloan Poelman</h1>
+                              <h1 class="text-left text-2xl font-medium mb-1 -mt-2">Sloan Poelman</h1>
                               <hr>
                               <h5 class="text-left text-sm">Graduate @BYU</h5>
                               <h5 class="text-left text-sm">2x BYU Animation Award Winner</h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
-                                  <p class="text-left  text-sm ">
+                                  <p class="text-left text-md ">
                                    Sloan Poelman is a passionate multimedia artist strong in stylized and realistic
                                    rendering styles. Originally from Orem, Utah, he worked with a team at Brigham Young
                                    University to compete on a national level with two video games, and received BYU Design
@@ -967,13 +967,13 @@
                         ================================================================-->
                           <div class="slide">
                             <section class="biotext">
-                              <h1 class="text-left text-xl font-medium mb-1 -mt-2">Laura Prados-Bacó</h1>
+                              <h1 class="text-left text-2xl font-medium mb-1 -mt-2">Laura Prados-Bacó</h1>
                               <hr>
                               <h5 class="text-left text-sm  mb-1">Studying @Babson College</h5>
                               <h5 class="text-left text-sm  mb-1"></h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
-                                  <p class="text-left  text-sm ">
+                                  <p class="text-left text-md ">
                                     Laura Prados-Bacó was born and raised in San Juan, Puerto Rico. At 18 years old, she left
                                     Puerto Rico to pursue an education at Babson College. She currently holds the Marketing
                                     position in the Business Development division at Vinci, where she aids with the creation of
