--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -714,6 +714,11 @@
 
                  <style media="screen">
                  @media screen and (max-width: 640px) {
+
+                   .flickity-slider {
+                      width: 70%;
+                   }
+
                    .img-caption {
                      position: absolute;
                      /* height: 20px; */
