--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -48,7 +48,7 @@
            <!-- - - - - - - - - Airforce ---------------->
            <section class="mb-4 panel background first">
               <section class="text-primary body-font">
-                <h1 class="text-primary text-center font-medium sm:text-4xl text-3xl xl:text-4xl mt-10 -mb-16 font-sans">Air Craft Maintenance</h1>
+                <h1 class="text-primary text-center font-medium sm:text-4xl text-3xl lg:text-6xl xl:text-4xl mt-10 -mb-16 font-sans ">Air Craft Maintenance</h1>
                 <section class="text-gray-700 body-font">
                    <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
