--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -165,7 +165,7 @@
 
 
 <!--============== Partners Section =======================-->
-      <section class="panel">
+      <section class="panel partnersSection">
         <section class="text-gray-700 body-font bg-secondary object-center">
           <div class="container px-5 mx-auto xl:mt-32">
             <h2 class="mt-16 text-center title-font font-sans text-4xl font-medium text-primary tracking-wider uppercase">Partners</h2>
@@ -193,6 +193,10 @@
 
 
         <style media="screen">
+
+        .partnersSection {
+          overflow-y: hidden;
+        }
 
         .flickity-viewport {
           overflow: visible;
@@ -279,17 +283,7 @@
                   filter: none;
         }
 
-        @media screen and ( min-width: 768px ) {
-          .carousel-cell {
-            height: 400px;
-          }
-        }
 
-        @media screen and ( min-width: 960px ) {
-          .carousel-cell {
-            width: 60%;
-          }
-        }
 
         /* buttons, no circle */
         .flickity-prev-next-button {
@@ -319,47 +313,7 @@
         }
         </style>
 
-
-
-
-
-        <!-- <section class="partnersBlock h-screen w-full mb-64">
-          <section class="text-gray-700 body-font bg-secondary">
-            <div class="container px-5 mx-auto">
-              <h2 class="mt-16 text-center title-font font-sans text-4xl font-medium text-primary tracking-wider uppercase">Partners</h2>
-              <div class="mt-2 md:flex lg:flex-wrap lg:mt-16">
-                <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
-                  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="sm:w-auto lg:h-40 md:h-40 sm:h-40 w-full object-contain object-center p-4" src="../public/img/turbine.png" alt="blog">
-                    <div class="p-6">
-                      <h1 class="tracking-widest text-center text-2xl title-font font-semibold text-primary mb-6 uppercase">Wind Turbines</h1>
-                      <a id="clickHere" class="text-lg text-primary underline hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="/partners">click here</a>
-                    </div>
-                  </div>
-                </div>
-                <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
-                  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-40 md:h-40 sm:h-40 w-full object-contain object-center p-4" src="../public/img/jet.png" alt="blog">
-                    <div class="p-6">
-                      <h1 class="tracking-widest text-center text-2xl title-font font-semibold text-primary mb-6 uppercase">AIR CRAFT MAINTENANCE</h1>
-                      <a id="whyCodex" class="text-lg text-primary underline hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="/partners">Explore how our partners are using this.</a>
-                    </div>
-                  </div>
-                </div>
-
-                <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
-                  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-40 md:h-40 sm:h-40 w-full object-contain object-center p-4" src="../public/img/soldier.png" alt="blog">
-                    <div class="p-6">
-                      <h1 class="tracking-widest text-center text-2xl title-font font-semibold text-primary mb-6 uppercase">Solider Training</h1>
-                      <a id="clickHere" class="text-lg text-primary underline hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="/partners">click here</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-        </section> -->
+        <!-- <h1 class="text-6xl mt-32 text-primary">TEST TEST TEST</h1> -->
       </section>
 
       <!--==================  SPOTLIGHT SECTION ==================-->
@@ -685,8 +639,8 @@
 
 
          <!--============== Partners Section =======================-->
-               <section class="panel">
-                 <section class="text-gray-700 body-font bg-secondary">
+               <!-- <section class="panel"> -->
+                 <!-- <section class="text-gray-700 body-font bg-secondary">
                    <div class="container px-5 mx-auto">
                      <h2 class="mt-16 text-center title-font font-sans text-4xl font-medium text-primary tracking-wider uppercase">Partners</h2>
                      <div class="carousel js-flickity mt-18">
@@ -709,10 +663,10 @@
                        </div>
                    </div>
                  </div>
-               </section>
+               </section> -->
 
 
-                 <style media="screen">
+                 <!-- <style media="screen">
                  @media screen and (max-width: 640px) {
 
                    .flickity-slider {
@@ -834,7 +788,7 @@
                  }
 
                  </style>
-               </section>
+               </section> -->
 
 
 
