--- a/views/services.hbs
+++ b/views/services.hbs
@@ -47,7 +47,7 @@
             <hr class="-mt-4">
 
 
-              <h1 class="text-left tracking-wider p-4 mt-50 xl:mt-72 -mb-4 ml-50 sm:text-4xl md:text-4xl xl:text-5xl uppercase font-sans font-semibold">Codex</h1>
+              <h1 class="text-left tracking-wider p-4 mt-50 xl:mt-84 -mb-4 ml-50 text-4xl md:text-4xl lg:text-4xl xl:text-5xl md:text-red-900 lg:text-gray-900 xl:text-blue-900 uppercase font-sans font-semibold">Codex</h1>
               <div class="tracking-widest text-left xl:text-3xl p-4 ml-50">
                 <p>Access the entire codex suite or</p>
                 <p>pick and choose which toolkits to use.</p>
