Fix headings on services,partners, and contact pages

--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -39,7 +39,7 @@
 
 
               <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xl:text-5xl font-sans font-semibold xl:mt-72">PARTNERS</h1>
-              <div class="tracking-widest text-left xl:text-3xl p-4 ml-50">
+              <div class="tracking-widest text-left xl:text-3xl p-4 ml-50 xl:mt-12">
                 <p>See how VINCI is changing </p>
                 <p>training today.</p>
               </div>
