--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -38,7 +38,7 @@
           </header>
           <hr class="-mt-4">
           <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xl:text-5xl uppercase font-sans font-semibold xl:mt-72">CONTACT</h1>
-          <div class="tracking-widest text-left xl:text-3xl p-4 ml-50">
+          <div class="tracking-widest text-left xl:text-3xl p-4 ml-50 xl:mt-12">
             <p>Have any questions?</p>
             <p>Drop us a message.</p>
             <p>Book a demo.</p>
