--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -1,5 +1,5 @@
 .mobile-main {
-  display: none;
+  display: block;
 }
 
 @media screen and (max-width: 640px) {
@@ -8,7 +8,7 @@
   }
 
   .mobile-main{
-    display: block;
+    display: block !important;
   }
 
 
