started removing panels

--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -6,7 +6,7 @@
     <!-- css link -->
     <link rel="stylesheet" href="../public/css/index.css">
     <link rel="stylesheet" href="../public/css/output-styles.css">
-    <link rel="stylesheet" href="../public/css/panels.css">
+    <link rel="stylesheet" href="../public/css/  s.css">
     <link rel="stylesheet" href="../public/css/mobile.css">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <title>Vinci VR</title>
@@ -19,7 +19,7 @@
 
     <!--================== NAV SECTION ==================-->
 
-        <section class="hero-section panel text-center h-screen w-full">
+        <section class="hero-section    text-center h-screen w-full">
           <header class="text-gray-700 body-font">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center ">
                 <a href="/" class="flex items-center mb-4 md:mb-0 xl:-mb-8  z-10">
@@ -38,7 +38,7 @@
           <hr class="-mt-4">
 
       <!--================== HERO SECTION ==================-->
-        <style media="screen">
+        <!-- <style media="screen">
           body {
             width: 100vw !important;
             overflow-x: hidden;
@@ -50,10 +50,10 @@
             overflow-y: hidden !important;
             height: 100vh;
           }
-        </style>
+        </style> -->
 
           <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.3); z-index:0;"></div>
-          <video id="vidPreview" class="bg-video object-cover overflow-y-hidden" autoplay muted loop style="position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; z-index:-1;">
+          <video id="vidPreview" class="bg-video object-cover overflow-y-hidden" autoplay muted loop style="position: absolute; top: 0; left: 0; z-index:-1;">
               <source src="../public/video/background2.mp4" type="video/mp4">
           </video>
           <section class="font-sans hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40 lg: xl:mt-64 ">
@@ -75,7 +75,7 @@
 
 
       <!--==================  INTRO SECTION ==================-->
-      <section class="panel bg-secondary">
+      <section class="border-b  border-gray-300 border-opacity-50 bg-secondary">
           <section class="lg:flex mb-4 ">
              <div class="w-3/5 ml-20 m-2 mt-16 xl:mt-40 p-6 pt-14">
                  <h2 class ="text-primary font-medium text-3xl xl:text-4xl text-left tracking-wider font-sans">
@@ -87,7 +87,7 @@
                   With Codex, teams can now improve their training by creating, training in and analyzing immersive VR simulations.
                   </p>
 
-                  <a id="learnMore" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm lg:text-sm sm:ml-1 sm:-my-4 sm:block md:ml-1 md:mt-10 lg:ml-1 lg:mt-32 xl:mt-40"  style="width:50%;"  href="/services">
+                  <a id="learnMore" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm lg:text-sm sm:ml-1 sm:-my-4 sm:block md:ml-1 md:mt-10 lg:ml-1 lg:mt-32 lg:mb-24 xl:mt-40"  style="width:50%;"  href="/services">
                     <p class="text-center xl:px-auto xl:text-xl">LEARN MORE ABOUT CODEX </p>
                   </a>
              </div>
@@ -100,7 +100,7 @@
      </section>
 
 
-     <section class="panel">
+     <section class="  ">
        <section class="partnersBlock h-screen w-full mb-64">
          <section class="text-gray-700 body-font">
            <div class="container px-5 mt-20 xl:mt-32 mx-auto">
@@ -165,7 +165,7 @@
 
 
 <!--============== Partners Section =======================-->
-      <section class="panel partnersSection">
+      <section class="   partnersSection">
         <section class="text-gray-700 body-font bg-secondary object-center overflow-auto">
           <div class="container px-5 mx-auto xl:mt-32">
             <h2 class="mt-16 text-center title-font font-sans text-4xl font-medium text-primary tracking-wider uppercase">Partners</h2>
@@ -317,12 +317,12 @@
       </section>
 
       <!--==================  SPOTLIGHT SECTION ==================-->
-      <section class="panel">
-        <section class="panel spotlight h-screen w-full">
+      <section class="  ">
+        <section class="   spotlight h-screen w-full">
           <h1 class="text-center text-4xl mt-16 mb uppercase font-sans font-medium z-30 relative">Spotlight</h1>
           <section class="spot-container flex justify-center p-4">
 
-            <!-- videoWrapper used for width and height of video in panel css -->
+            <!-- videoWrapper used for width and height of video in    css -->
             <div class="videoWrapper">
                 <iframe width="860" height="615" src="https://www.youtube-nocookie.com/embed/NloJsABn8qM?vq=hd720" frameborder="0" allow="encrypted-media; picture-in-picture" allowfullscreen="true" controls="0"></iframe>
             </div>
@@ -333,8 +333,8 @@
 
 
       <!--================== FOOTER/CONTACT SECTION ==================-->
-      <section class="panel">
-        <section class="bg-secondary panel">
+      <section class="  ">
+        <section class="bg-secondary   ">
            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
              <h1 class ="text-primary text-center text-4xl font-sans xl:mt-12">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-32 xl:mt-40">
@@ -515,7 +515,7 @@
             </style>
         </section>
 
-        <section class="hero-section panel text-center h-screen w-full">
+        <section class="hero-section    text-center h-screen w-full">
 
       <!--==================
        HERO SECTION
@@ -551,7 +551,7 @@
       <!--==================
        INTRO SECTION
       ==================-->
-      <section class="panel bg-secondary">
+      <section class="   bg-secondary">
           <section class="sm:block lg:flex mb-4">
              <div class="lg:w-3/5 lg:ml-20 m-2 mt-12 p-6 pt-14 sm:w-full sm:h-vh">
                  <h2 class ="text-primary font-medium text-3xl text-left tracking-wider font-sans">
@@ -574,7 +574,7 @@
            </section>
          </section>
 
-         <section class="panel">
+         <section class="  ">
            <section class="overflow-x-auto partnersBlock h-screen w-full mb-64">
              <section class="text-gray-700 body-font">
                <div class="container px-5 mt-16 mx-auto">
@@ -639,7 +639,7 @@
 
 
          <!--============== Partners Section =======================-->
-               <!-- <section class="panel"> -->
+               <!-- <section class="  "> -->
                  <!-- <section class="text-gray-700 body-font bg-secondary">
                    <div class="container px-5 mx-auto">
                      <h2 class="mt-16 text-center title-font font-sans text-4xl font-medium text-primary tracking-wider uppercase">Partners</h2>
@@ -781,8 +781,8 @@
 
 
       <!--================== SPOTLIGHT SECTION  ==================-->
-      <section class="panel">
-        <section class="panel spotlight h-screen w-full">
+      <section class="  ">
+        <section class="   spotlight h-screen w-full">
 
           <h1 class="text-center text-3xl mt-12 uppercase font-sans font-medium">Spotlight</h1>
 
@@ -797,9 +797,9 @@
 
 
       <!--================== FOOTER/CONTACT SECTION ==================-->
-      <section class="panel">
+      <section class="  ">
 
-        <section class="bg-secondary panel">
+        <section class="bg-secondary   ">
            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
              <h1 class ="text-primary text-center font-medium text-3xl font-sans lg:-mb-32">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-24">
@@ -848,7 +848,7 @@
 
       </section>   <!-- end of mobile container -->
 
-     </section> <!-- end of panel container -->
+     </section> <!-- end of    container -->
 
  <!-- ===============
      SCRIPTS
