--- a/views/about.hbs
+++ b/views/about.hbs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../public/css/about.css">
+    <!-- <link rel="stylesheet" href="../public/css/about.css"> -->
     <link rel="stylesheet" href="../public/css/bios.css">
     <link rel="stylesheet" href="../public/css/output-styles.css">
     <link rel="stylesheet" href="../public/css/mobile.css">
