--- a/views/services.hbs
+++ b/views/services.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css link -->
     <link rel="stylesheet" href="../public/css/output-styles.css">
-    <link rel="stylesheet" href="../public/css/panels.css">
+    <!-- <link rel="stylesheet" href="../public/css/panels.css"> -->
     <link rel="stylesheet" href="../public/css/services.css">
     <link rel="stylesheet" href="../public/css/mobile.css">
     <title>Vinci VR</title>
