--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -6,7 +6,7 @@
     <!-- css link -->
     <link rel="stylesheet" href="../public/css/index.css">
     <link rel="stylesheet" href="../public/css/output-styles.css">
-    <link rel="stylesheet" href="../public/css/  s.css">
+    <!-- <link rel="stylesheet" href="../public/css/panels.css"> -->
     <link rel="stylesheet" href="../public/css/mobile.css">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <title>Vinci VR</title>
@@ -75,7 +75,7 @@
 
 
       <!--==================  INTRO SECTION ==================-->
-      <section class="border-b  border-gray-300 border-opacity-50 bg-secondary">
+      <section class="border-b border-gray-300 border-opacity-25 bg-secondary">
           <section class="lg:flex mb-4 ">
              <div class="w-3/5 ml-20 m-2 mt-16 xl:mt-40 p-6 pt-14">
                  <h2 class ="text-primary font-medium text-3xl xl:text-4xl text-left tracking-wider font-sans">
@@ -87,7 +87,7 @@
                   With Codex, teams can now improve their training by creating, training in and analyzing immersive VR simulations.
                   </p>
 
-                  <a id="learnMore" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm lg:text-sm sm:ml-1 sm:-my-4 sm:block md:ml-1 md:mt-10 lg:ml-1 lg:mt-32 lg:mb-24 xl:mt-40"  style="width:50%;"  href="/services">
+                  <a id="learnMore" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm lg:text-sm sm:ml-1 sm:-my-4 sm:block md:ml-1 md:mt-10 lg:ml-1 lg:mt-32 lg:mb-32 xl:mt-40"  style="width:40%;"  href="/services">
                     <p class="text-center xl:px-auto xl:text-xl">LEARN MORE ABOUT CODEX </p>
                   </a>
              </div>
@@ -99,9 +99,9 @@
            </section>
      </section>
 
-
-     <section class="  ">
-       <section class="partnersBlock h-screen w-full mb-64">
+  <!--==================  Why Vinci ==================-->
+     <section class="border-b border-gray-300 border-opacity-25">
+       <section class="partnersBlock h-screen w-full lg:mb-10 mb-32">
          <section class="text-gray-700 body-font">
            <div class="container px-5 mt-20 xl:mt-32 mx-auto">
              <div class="text-center mb-20">
@@ -165,9 +165,9 @@
 
 
 <!--============== Partners Section =======================-->
-      <section class="   partnersSection">
+      <section class="border-b border-gray-300 border-opacity-25 partnersSection">
         <section class="text-gray-700 body-font bg-secondary object-center overflow-auto">
-          <div class="container px-5 mx-auto xl:mt-32">
+          <div class="container px-5 mx-auto lg:mt-24 xl:mt-32">
             <h2 class="mt-16 text-center title-font font-sans text-4xl font-medium text-primary tracking-wider uppercase">Partners</h2>
             <div class="carousel js-flickity mt-18">
               <div class="carousel-cell border-2 border-gray-200 rounded-lg overflow-hidden m-32">
@@ -317,7 +317,7 @@
       </section>
 
       <!--==================  SPOTLIGHT SECTION ==================-->
-      <section class="  ">
+      <section class="border-b border-gray-300 border-opacity-25  ">
         <section class="   spotlight h-screen w-full">
           <h1 class="text-center text-4xl mt-16 mb uppercase font-sans font-medium z-30 relative">Spotlight</h1>
           <section class="spot-container flex justify-center p-4">
@@ -527,7 +527,7 @@
         </style>
 
           <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.3); z-index:0;"></div>
-          <video class="bg-video object-cover overflow-hidden" autoplay muted loop style="position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; z-index:-1;">
+          <video class="bg-video object-cover overflow-hidden" autoplay muted loop style="position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100vh; z-index:-1;">
               <source src="../public/video/background2.mp4" type="video/mp4">
           </video>
           <section class="font-sans hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40 ">
@@ -551,7 +551,7 @@
       <!--==================
        INTRO SECTION
       ==================-->
-      <section class="   bg-secondary">
+      <section class=" border-b border-gray-300 border-opacity-25  bg-secondary">
           <section class="sm:block lg:flex mb-4">
              <div class="lg:w-3/5 lg:ml-20 m-2 mt-12 p-6 pt-14 sm:w-full sm:h-vh">
                  <h2 class ="text-primary font-medium text-3xl text-left tracking-wider font-sans">
@@ -574,7 +574,7 @@
            </section>
          </section>
 
-         <section class="  ">
+         <section class="  border-b border-gray-300 border-opacity-25">
            <section class="overflow-x-auto partnersBlock h-screen w-full mb-64">
              <section class="text-gray-700 body-font">
                <div class="container px-5 mt-16 mx-auto">
@@ -781,7 +781,7 @@
 
 
       <!--================== SPOTLIGHT SECTION  ==================-->
-      <section class="  ">
+      <section class="border-b border-gray-300 border-opacity-25  ">
         <section class="   spotlight h-screen w-full">
 
           <h1 class="text-center text-3xl mt-12 uppercase font-sans font-medium">Spotlight</h1>
