--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -38,7 +38,7 @@
           <hr class="-mt-4">
 
       <!--================== HERO SECTION ==================-->
-        <!-- <style media="screen">
+        <style media="screen">
           body {
             width: 100vw !important;
             overflow-x: hidden;
@@ -50,11 +50,12 @@
             overflow-y: hidden !important;
             height: 100vh;
           }
-        </style> -->
+        </style>
 
-          <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.3); z-index:0;"></div>
-          <video id="vidPreview" class="bg-video object-cover overflow-y-hidden" autoplay muted loop style="position: absolute; top: 0; left: 0; z-index:-1;">
+          <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  width:100vw; height:100vh; background-color:rgba(0,0,0,0.3); z-index:0;"></div>
+          <video id="vidPreview" class="bg-video object-cover overflow-y-hidden" autoplay muted loop style="position: absolute; top: 0;  width: 100vw; height: 100vh; left: 0; z-index:-1;">
               <source src="../public/video/background2.mp4" type="video/mp4">
+                
           </video>
           <section class="font-sans hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40 lg: xl:mt-64 ">
             <h3 class="font-sans sm:text-xl md:text-xl xl:text-3xl"> PREPARE FOR THE REAL WORLD
