prepare for deploy

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -18,12 +18,12 @@ body {
   height: 200px;
 } */
 
-
+/* 
 .tres-footer {
   position: absolute;
   bottom: 0;
   right: 0;
   left: 0;
-  /* width: 100%; */
+  width: 100%;
   background-color: RGBA(25, 25, 25, 0.7);
-}
+} */
