--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -55,7 +55,7 @@
           <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  width:100vw; height:100vh; background-color:rgba(0,0,0,0.3); z-index:0;"></div>
           <video id="vidPreview" class="bg-video object-cover overflow-y-hidden" autoplay muted loop style="position: absolute; top: 0;  width: 100vw; height: 100vh; left: 0; z-index:-1;">
               <source src="../public/video/background2.mp4" type="video/mp4">
-                
+
           </video>
           <section class="font-sans hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40 lg: xl:mt-64 ">
             <h3 class="font-sans sm:text-xl md:text-xl xl:text-3xl"> PREPARE FOR THE REAL WORLD
@@ -104,7 +104,7 @@
      <section class="border-b border-gray-300 border-opacity-25">
        <section class="partnersBlock h-screen w-full lg:mb-10 mb-32">
          <section class="text-gray-700 body-font">
-           <div class="container px-5 mt-20 xl:mt-32 mx-auto">
+           <div class="container px-5 mt-20 xl:mt-32">
              <div class="text-center mb-20">
                <h1 class=" text-3xl xl:text-4xl font-medium title-font text-gray-900 mb-4 text-primary">Why VINCI?</h1>
                <div class="flex mt-6 justify-center">
@@ -575,8 +575,9 @@
            </section>
          </section>
 
+<!--=========== WHY VINCI ===================== -->
          <section class="  border-b border-gray-300 border-opacity-25">
-           <section class="overflow-x-auto partnersBlock h-screen w-full mb-64">
+           <section class="partnersBlock h-screen w-full mb-64">
              <section class="text-gray-700 body-font">
                <div class="container px-5 mt-16 mx-auto">
                  <div class="text-center mb-20">
